tests/unit/default/syntax-error/077-create-table-dot-column-after.x.t
---- IN ----
+%table.name:int>|
---- OUT ----
---- ERR ----
syntax: expected <name> after `....name:int>` near `|` at position 17 - at line 1
---- EXIT ----
1
